--- a/finding_donors.ipynb
+++ b/finding_donors.ipynb
@@ -815,7 +815,41 @@
         "id": "MQMiUm-fZbQH"
       },
       "source": [
-        "**Answer: **"
+        "**Answer: ** \n",
+        "\n",
+        "As we have only two ways of outcomes, I would assume that this is a two-class classification problem. and there are several types of supervised learning algorithms that can be used for two-class classification as follows;\n",
+        "AdaBoost\n",
+        "AdaBoost has been applied to face recognition in Viola & Jones’ Face Detector [(1)](http://users.cecs.anu.edu.au/~wanglei/SPR_course/boosting.pdf)\n",
+        "\n",
+        " Pros:\n",
+        "Fast and robust face detector.\n",
+        "The system can be run in real-time\n",
+        "Cons: Training stage is time consuming depending on the number of training samples and number of features used.\n",
+        "Require a lot of face training samples \n",
+        "We can apply this model because it's a medium size dataset. The model can be slow to train, however, it shouldn't matter because we probably want to run the model periodically and not in real-time.\n",
+        "Gaussian Naive Bayes\n",
+        "Naive Bayes has found several application including text categorization.[(2)](https://www.quora.com/In-what-real-world-applications-is-Naive-Bayes-classifier-used)\n",
+        "\n",
+        "Naive Bayes is a simple and easy to implement algorithm. Due to its simplicity, this algorithm might outperform more complex models when the data set isn’t large enough.\n",
+        "You can try it whenever you don’t need the actual probabilities for each class, but only to know which is the most likely.\n",
+        "A classical use case for Naive Bayes is document classification: Determining whether a given (text) document corresponds to one or more categories. In the text case, the features used might be the presence or absence of key words.\n",
+        "\n",
+        "Support Vector Machines\n",
+        "SVMs have a number of applications in several fields. Some common applications of SVM are Face detection, Classification of images, Bioinformatics – It includes protein classification and cancer classification. \n",
+        "Pros:\n",
+        "It is really effective in the higher dimension.\n",
+        "Effective when the number of features are more than training examples.\n",
+        "Best algorithm when classes are separable\n",
+        "The hyperplane is affected by only the support vectors thus outliers have less impact.\n",
+        "SVM is suited for extreme case binary classification.\n",
+        "cons:\n",
+        "For larger dataset, it requires a large amount of time to process.\n",
+        "Does not perform well in case of overlapped classes.\n",
+        "Selecting, appropriately hyperparameters of the SVM that will allow for sufficient generalization performance.\n",
+        "Selecting the appropriate kernel function can be tricky.[(3)](https://towardsdatascience.com/support-vector-machines-svm-c9ef22815589)\n",
+        "\n",
+        "Since we do not know if there are any underlying patterns in our dataset, therefore a flexible algorithm like SVMs with kernel tricks can be helpful in the classification process. Also, we don't have more features than samples therefore making it less prone to overfit with our dataset.\n",
+        "\n"
       ]
     },
     {
