Add ans of ques3&4

--- a/finding_donors.ipynb
+++ b/finding_donors.ipynb
@@ -1074,7 +1074,15 @@
         "id": "TLER6UB3ZbQY"
       },
       "source": [
-        "**Answer: **"
+        "**Answer: **\n",
+        "\n",
+        "looking at the graphs,  it suggests that is **AdaBoost** is the most appropriate model for the task of identifying individuals that make more than $50,000 as we need to choose the most accurate model.\n",
+        "\n",
+        "With regards to F-score and accuracy on the testing set AdaBoost shows the highest figures, significantly higher than the GaussianNB and slightly better than the SVC.\n",
+        "\n",
+        "With regard to the time consumes, we can see that the SVC model takes much more training and predicting time than AdaBoost. \n",
+        "\n",
+        "to conclude, we recommend that using **the AdaBoost model** is the better choice as it is accurate, fast, and has the highest F-score."
       ]
     },
     {
@@ -1098,7 +1106,12 @@
         "id": "WEJJO-vQZbQd"
       },
       "source": [
-        "**Answer: ** "
+        "**Answer: ** \n",
+        "\n",
+        "An AdaBoost classifier is a meta-estimator that begins by fitting a classifier on the original dataset and then fits additional copies of the classifier on the same dataset but where the weights of incorrectly classified instances are adjusted such that subsequent classifiers focus more on difficult cases. [(4)](https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.AdaBoostClassifier.html#sklearn.ensemble.AdaBoostClassifier)\n",
+        "\n",
+        "In steps, first, we fit our first leaner in order to maximize accuracy or equivalently minimize the number of errors, then our second leaner needs to fix the mistakes the one has made. then we will take misclassified points and make them bigger. in other words, we will punish the model if it misses these points. so the next weak leaner needs to focus more on these.  The second weak leaner shall correctly classify these points. then we will punish the points that misclassified by this iteration. we iterate till it is hard to correctly classify the points. then finally we combine the models.\n",
+        " \n"
       ]
     },
     {
