--- a/finding_donors.ipynb
+++ b/finding_donors.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "finding_donors.ipynb",
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -121,7 +120,7 @@
         "# Success - Display the first record\n",
         "display(data.head(n=1))"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -241,7 +240,7 @@
         "print(\"Individuals making at most $50,000: {}\".format(n_at_most_50k))\n",
         "print(\"Percentage of individuals making more than $50,000: {}%\".format(greater_percent))"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -319,7 +318,7 @@
         "# Visualize skewed continuous features of original data\n",
         "vs.distribution(data)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -366,7 +365,7 @@
         "# Visualize the new log distributions\n",
         "vs.distribution(features_log_transformed, transformed = True)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -419,7 +418,7 @@
         "# Show an example of a record with scaling applied\n",
         "display(features_log_minmax_transform.head(n = 5))"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -607,7 +606,7 @@
         "# Uncomment the following line to see the encoded feature names\n",
         "print(encoded)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -655,7 +654,7 @@
         "print(\"Training set has {} samples.\".format(X_train.shape[0]))\n",
         "print(\"Testing set has {} samples.\".format(X_test.shape[0]))"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -763,7 +762,7 @@
         "# Print the results \n",
         "print(\"Naive Predictor: [Accuracy score: {:.4f}, F-score: {:.4f}]\".format(accuracy, fscore))"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -938,7 +937,7 @@
         "    # Return the results\n",
         "    return results"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1000,7 +999,7 @@
         "# Run metrics visualization for the three supervised learning models chosen\n",
         "vs.evaluate(results, accuracy, fscore)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1111,6 +1110,15 @@
         "An AdaBoost classifier is a meta-estimator that begins by fitting a classifier on the original dataset and then fits additional copies of the classifier on the same dataset but where the weights of incorrectly classified instances are adjusted such that subsequent classifiers focus more on difficult cases. [(4)](https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.AdaBoostClassifier.html#sklearn.ensemble.AdaBoostClassifier)\n",
         "\n",
         "In steps, first, we fit our first leaner in order to maximize accuracy or equivalently minimize the number of errors, then our second leaner needs to fix the mistakes the one has made. then we will take misclassified points and make them bigger. in other words, we will punish the model if it misses these points. so the next weak leaner needs to focus more on these.  The second weak leaner shall correctly classify these points. then we will punish the points that misclassified by this iteration. we iterate till it is hard to correctly classify the points. then finally we combine the models.\n",
+        "\n",
+        "\n",
+        "**For more explanation for our case: **\n",
+        "\n",
+        "Boosting Classifier works by combining several simple learners to create a group of learners that can predict whether an individual earns above 50k or not. Each of the learners is created using “features” of donors (eg. race, sex, education, etc) to create a set of rules that can predict his or her income.\n",
+        "\n",
+        "During the training process, the algorithm looks at the mistake points where it has predicted badly and prioritizes the correct prediction of those in the next round. With each round, the model finds the best learner then repeat the process until we can’t improve the predictions. then we combined the learners to make a final model, where they each vote to predict if a person earns more than 50k or not. Usually, we take the majority of the votes to make a final prediction. \n",
+        "\n",
+        "Using this final combined model, we can predict for a potential new donor and predict if they earn more than 50K or not.\n",
         " \n"
       ]
     },
@@ -1181,7 +1189,7 @@
         "print(\"Final accuracy score on the testing data: {:.4f}\".format(accuracy_score(y_test, best_predictions)))\n",
         "print(\"Final F-score on the testing data: {:.4f}\".format(fbeta_score(y_test, best_predictions, beta = 0.5)))"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1323,7 +1331,7 @@
         "# Plot\n",
         "vs.feature_plot(importances, X_train, y_train)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1407,7 +1415,7 @@
         "print(\"Accuracy on testing data: {:.4f}\".format(accuracy_score(y_test, reduced_predictions)))\n",
         "print(\"F-score on testing data: {:.4f}\".format(fbeta_score(y_test, reduced_predictions, beta = 0.5)))"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
